Css and Ablot section

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTP-8">
+        <meta charset="UTF-8">
         <title>MMS</title>
-        <link rel = "icon" href =  
-"icon.png" 
-        type = "image/x-icon"> 
+        <link rel = "icon" href =  "icon.png" type = "image/x-icon"> 
+        <link rel = "stylesheet" type="text/css" href = "style.css">
     </head>
     <body>
         <div class="section" id="heading">
             <h1>Minecart Metro Server</h1>
-            <h3>IP:server.minecartmetro.com</h3>
+            <h3>IP: play.minecartmetro.com</h3>
         </div>
+        <hr id="hr-a">
+        <div class="section" id="info">
+            <h2>
+                About
+            </h2>
+            <p>
+                The Minecart Metro has been a large-scale project in progress for a year. The server in which it's hosted features plugins that enchance the metro experience. The server uses TrainCarts for the trains and uses several other plugins for a survival-like experience.
+            </p>
+        </div>
+        <hr id="hr-b">
+        <hr id="hr-c">
     </body>
 </html>
