--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
             </p>
         </div>
         <hr id="hr-b">
+        <div class="section" id="maps">
+            <h2>
+                Minecart Metro Map
+            </h2>
+            <p>
+                A Interactive Real-Time Minecraft map can be found below:
+            </p>
+            <a>Interactive Map</a>
+            <br><br>
+            <p>
+                A Metro System Map can be found here:
+            </p>
+            <a href="https://bit.ly/mmsmap">Metro Map</a>
+        </div>
+            
         <hr id="hr-c">
     </body>
 </html>
